--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "canvas-confetti": "^1.6.0",
     "framer-motion": "^10.15.1",
     "react": "^18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "zustand": "^4.4.0"
   },
